# critical-care-scores

./: .gitignore  CLAUDE.md  LICENSE.docs  Plans.md  README.md  SCORES.md  TODO.md  pyproject.toml
.github/workflows/: verify-scores.yml
docs/: ARCHITECTURE.md  REQUIREMENTS.md  RISK.md
docs/verification/: section-01-general-severity.md
engine/ccscores/: __init__.py  engine.py  errors.py  formula.py
engine/tests/: conftest.py  test_golden_vectors.py
schema/: score.schema.json
scores/: kdigo-aki.json  pf-ratio.json  qsofa.json  sirs.json
tools/: discover_scores.py  verify_definitions.py  verify_scores.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/scripts/: sync-scores.mjs
web/src/: App.test.tsx  App.tsx  data.ts  references.ts  sections.ts  styles.css
web/src/engine/: engine.test.ts  engine.ts  formula.ts  types.ts
